--- a/alpha-zero-train/Cargo.toml
+++ b/alpha-zero-train/Cargo.toml
@@ -16,3 +16,4 @@ rand_distr = { version = "0.4" }
 rayon = { version = "1.8" }
 tch = { version = "0.14", features = ["download-libtorch"] }
 thiserror = { version = "1" }
+indicatif = "0.17.7"
