feat: add arena to play with alpha-zero.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tch = { version = "0.14", features = ["download-libtorch"] }
 
 [workspace]
 members = [
+  "./alpha-zero-arena",
   "./alpha-zero-game",
   "./alpha-zero-mcts",
   "./alpha-zero-nn",
