--- a/alpha-zero-game/Cargo.toml
+++ b/alpha-zero-game/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bitvec = { version = "1" }
+chess = { version = "3" }
 serde = { version = "1.0", features = ["derive"], optional = true }
 
 [features]
